--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
   <p>Copyright@2020&#128151</p>
 </footer>
 
-<script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
+<script
+  src="https://unpkg.com/aos@next/dist/aos.js">
     AOS.init({
         offset: 400,
         duration: 800
